# img_to_3d_pipeline

./: .gitignore  2d3d_pipeline.yml  README.md  im23D_pipeline.yml  install.sh  pyproject.toml  uninstall.sh
data/: README.md  aria_download_file.txt
data/3dmodels/: how_to_convert.txt
images/: im23d_pipeline_diagram.drawio
notebooks/: dataset_stats.ipynb  pipeline.ipynb
src/2d3d_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/2d3d_pipeline/pipeline/: pipeline.py
src/im23D_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/im23D_pipeline/dataloader/: __init__.py  load_data.py
src/im23D_pipeline/datasets/: __init__.py  abo_dataset.py  base_dataset.py  dataset_classes.py  pix3d_dataset.py  r2n2_custom.py  r2n2_dataset.py  shapenet_dataset.py
src/im23D_pipeline/pipeline/: pipeline.py
src/im23D_pipeline/pydantic_models/: __init__.py  model_descriptions.py  models.py
tests/: pytest.ini  test_2d3d_pipeline_pydantic.py  test_im23D_pipeline_pydantic.py
