[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "im23D_pipeline"
version = "0.1.0"
authors = [
    {author="Andrew Bartels", email="<andrew.bartels@gatech.edu>"},
]
description = "image to 3d pipeline"
readme = "README.md"
license = {text = "GNU AGPL"}


dependencies = [
    "dask",
    "gcsfs",
    "s3fs",
    "geopandas",
    "fsspec",
    "numpy",
    "pandas",
    "pydantic",
    "pydantic_cli",
    "python-dotenv",
    "xarray",
    "torch",
    "torchvision",
    "torchaudio",
    "fvcore",
    "hydra-core",
    "Pillow",
    "plotly",
    "requests",
    "imageio",
    "matplotlib",
    "numpy",
    "PyMCubes",
    "tqdm",
    "visdom",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "datashader",
    "jupyter",
    "matplotlib",
    "pyarrow",
    "seaborn",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["im23D_pipeline*"]